fix(global): auditoria de qualidade/segurança - fase 2
- shared/exception: GlobalExceptionHandler não vaza mais mensagem crua de
  exceção genérica ao cliente (mantém log.error com o detalhe completo).
- schedule/auth: substituídas comparações de papel por string mágica
  (ROLE_PROVIDER/ROLE_CLIENT) por uso do RoleEnum já existente
  (ListSchedulesService, RegisterService + novo RoleEnum#toProfileType()).
- test(api): novos testes de integração/Controller (ScheduleControllerTest,
  ServiceControllerTest) complementando o gap além de AuthControllerTest.
- test(ui): instala Vitest + Testing Library e adiciona testes reais para
  LoginForm, ScheduleCalendar e Button.
- build(api): adiciona spotless-maven-plugin (googleJavaFormat) rodando na
  fase verify; codebase existente formatado via spotless:apply.
- chore(api): adiciona Makefile próprio em schedulling-api (setup/start/
  stop/logs/test/build) para os targets que o Makefile raiz já delegava.
- docs(compose): documenta a dependência externa central-db/shared-network
  (infra-core) no topo do docker-compose.yml raiz.
- docs: atualiza .claude/CLAUDE.md marcando os itens acima como resolvidos.